tests/ui/errors/snapshots/infer_subtraction_type_mismatch.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let x = "hello" - 5;
   ·           ───┬───
   ·              ╰── expected `int` or `float`, found `string`
 4 │ }
   ╰────
  help: The `-` operator can only be used with `int` or `float` · code: [infer.type_mismatch]
