tests/ui/errors/snapshots/infer_task_as_function_argument.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `task`
   ╭─[test.lis:5:11]
 4 │ fn f() {
 5 │   consume(task work());
   ·           ─────┬─────
   ·                ╰── produces no value
 6 │ }
   ╰────
  help: Move `task` to its own statement · code: [infer.task_in_expression_position]
